fix: Delete test data

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -176,7 +176,10 @@ main h2 {
         gap: 5px;
     }
     
-    .time, .subject, .room, .teacher {
+    .time,
+    .subject,
+    .room,
+    .teacher {
         width: 100%;
     }
     
